# syntax

./: Cargo.toml
examples/bplist/: main.rs
src/: lib.rs  pattern.rs  tokenizer.rs
src/core/: Cargo.toml
src/core/src/: cursor.rs  lib.rs  rule.rs
src/macros/: Cargo.toml
src/macros/src/: lib.rs
src/macros/src/deserialize/: fill.rs
syntax_macros/: Cargo.toml
syntax_macros/src/: lib.rs
