[package]
name = "syntax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syntax_macros = { path = "./syntax_macros", optional = true }

[[example]]
name = "bplist"

[features]
default = []
tokens = []
macros = ["dep:syntax_macros"]
